fixed spacings

--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ main p{
 #page{
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 5px;
 }
 
 #intro{
@@ -75,7 +75,7 @@ main p{
 }
 
 #intro2{
-  margin-top: -40px;
+  margin-top: 0px;
   font-family: "Segoe UI";
   border: 2px solid black;
   width: 40vw;
@@ -88,7 +88,8 @@ main p{
   border-radius: 10px;
   box-shadow: -10px 10px black;
   background-color: #d6fc4e59;
-  align-self: flex-end;
+  align-self: flex-start;
+  margin-left: 55vw; 
 }
 
 #intro3{
@@ -125,8 +126,8 @@ main p{
 }
 
 #vidheader{
-  position: absolute;
-  bottom: 34vh;
+  align-self: flex-start;
+  margin-left: 65vw; 
   right: 4%;
   font-size: clamp(14px, 1.5vw, 20px);
   font-family: "Segoe UI";
@@ -137,6 +138,7 @@ main p{
   box-shadow: -5px 5px black;
   z-index: 20;
   max-width: 30vw;
+
 }
 
 #downarr{
@@ -147,69 +149,50 @@ main p{
 }
 
 #ytvid{
-  position: absolute;
-  bottom: 2vh;
   width: 21vw;
   height: auto;
   aspect-ratio: 16/9;
-  right: 7%;
   border: 5px solid rgb(0, 0, 0);
   border-radius: 10px;
+  align-self: flex-start;
+  margin-left: 5vw; 
+  margin-top: 10px;
+  
 
 }
-
-#piano{
-  position: fixed;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
+#piano {
   display: flex;
+  flex-direction: row;
   border: 5px solid black;
+  margin: 20px auto; 
+  width: fit-content;
+  margin-left: 10vw; 
+  margin-top: 20px;
+}
+.key-group {
+  position: relative;
+  width: 5vw;
+  max-width: 80px;
+  min-width: 30px;
 }
 
-.keywhite{
-  height: 200px;
-  width: 80px;
+.keywhite {
+  width: 100%;
+  height: 15vw;
+  max-height: 200px;
+  min-height: 80px;
   background-color: white;
   border: 1px solid black;
 }
 
-.keyblack{
+.keyblack {
   position: absolute;
-  height: 100px;
-  width: 40px;
+  top: 0;
+  left: 70%;
+  width: 60%;
+  height: 55%;
   background-color: black;
   z-index: 10;
-}
-
-#cs{
-  position: absolute;
-  bottom: 100px;
-  left: 60px;
-}
-
-#ds{
-  position: absolute;
-  bottom: 100px;
-  left: 140px;
-}
-
-#fs{
-  position: absolute;
-  bottom: 100px;
-  left: 300px;
-}
-
-#gs{
-  position: absolute;
-  bottom: 100px;
-  left: 380px;
-}
-
-#as{
-  position: absolute;
-  bottom: 100px;
-  left: 460px;
 }
 
 .keywhite, .keyblack {
@@ -287,4 +270,58 @@ main p{
 
 #legend{
   animation-delay: 900ms;
+  flex-shrink: 0;
+}
+.row {
+  display: flex;
+
+}
+@media (max-width: 1100px) {
+
+  #page {
+    align-items: center;
+    gap: 35px;
+  }
+
+  #intro,
+  #intro2,
+  #intro3 {
+    width: 80vw;
+    margin-left: 0;
+    margin-right: 0;
+    align-self: center;
+  }
+
+  #vidheader {
+    margin-left: 0;
+    align-self: center;
+    max-width: 80vw;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .row {
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+  }
+
+  #legend {
+    width: 80vw;
+    margin-left: 0;
+    align-self: center;
+  }
+
+  #legend p {
+    margin: 0;
+  }
+
+  #piano {
+    margin-left: 0;
+  }
+
+  #ytvid {
+    width: 80vw;
+    margin-left: 0;
+  }
 }
